<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/itemCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:elevation="3dp"
            android:scaleType="centerCrop"
            android:src="@drawable/crop" />

        <ImageView
            android:id="@+id/edit_button_count"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="58dp"
            android:src="@drawable/baseline_edit_24"
            />

        <ImageView
            android:id="@+id/edit_button_value"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/baseline_edit_24"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:elevation="3dp"
            >
            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="24sp"
                />
            <TextView
                android:id="@+id/item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name"
                android:text="@string/count" />
            <TextView
                android:id="@+id/item_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_count"
                android:text="@string/item_value" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>